--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,8 +2,15 @@ project:
   type: website
 
 website:
-  title: "."
+  title: "Build extensible applications with Shiny"
   navbar:
+    tools: 
+      - icon: github
+        href: https://github.com/GShotwell/shiny-scipy
+      - icon: dicord
+        href: https://discord.gg/AQVJzG2bnN
+      - icon: linkedin
+        href: https://www.linkedin.com/in/gshotwell/
     left:
       - href: index.qmd
         text: Home
